--- a/BYOB/Auth/Login/Storyboard/Login.storyboard
+++ b/BYOB/Auth/Login/Storyboard/Login.storyboard
@@ -119,17 +119,30 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cJD-7L-xog">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cJD-7L-xog">
                                         <rect key="frame" x="364" y="179" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="EaZ-J4-iCZ"/>
                                             <constraint firstAttribute="height" constant="30" id="Hh3-hN-FUX"/>
                                         </constraints>
+                                        <color key="tintColor" red="0.12549019610000001" green="0.2274509804" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" image="eye.slash" catalog="system"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rCe-Gc-L5F">
+                                        <rect key="frame" x="257" y="224" width="137" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="S3M-bq-uhm"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="15"/>
+                                        <state key="normal" title="Forgot Password?">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="FO4-lt-CP1" firstAttribute="leading" secondItem="JkK-Xi-wNs" secondAttribute="leading" id="2pZ-wC-S4R"/>
+                                    <constraint firstItem="rCe-Gc-L5F" firstAttribute="top" secondItem="S7R-kf-dx2" secondAttribute="bottom" constant="5" id="3dI-EU-gWd"/>
                                     <constraint firstItem="cJD-7L-xog" firstAttribute="centerY" secondItem="S7R-kf-dx2" secondAttribute="centerY" id="AtM-3T-Vdx"/>
                                     <constraint firstItem="pal-5Y-VBF" firstAttribute="leading" secondItem="Iia-JP-xlN" secondAttribute="leading" id="Bdw-8y-arP"/>
                                     <constraint firstItem="Iia-JP-xlN" firstAttribute="trailing" secondItem="Bhb-gd-3L9" secondAttribute="trailing" id="CSn-Gx-UEy"/>
@@ -150,6 +163,7 @@
                                     <constraint firstItem="Krx-7e-vcI" firstAttribute="leading" secondItem="pal-5Y-VBF" secondAttribute="trailing" constant="6" id="htM-kd-ezy"/>
                                     <constraint firstItem="S7R-kf-dx2" firstAttribute="top" secondItem="Bhb-gd-3L9" secondAttribute="bottom" constant="20" id="iw5-hF-a3y"/>
                                     <constraint firstItem="S7R-kf-dx2" firstAttribute="height" secondItem="Bhb-gd-3L9" secondAttribute="height" id="kXS-4y-iLq"/>
+                                    <constraint firstItem="rCe-Gc-L5F" firstAttribute="trailing" secondItem="S7R-kf-dx2" secondAttribute="trailing" id="me2-sN-eA4"/>
                                     <constraint firstItem="Bhb-gd-3L9" firstAttribute="top" secondItem="FO4-lt-CP1" secondAttribute="bottom" constant="20" id="rBd-j0-Zam"/>
                                     <constraint firstAttribute="trailing" secondItem="Bhb-gd-3L9" secondAttribute="trailing" constant="20" id="uZP-B2-77h"/>
                                     <constraint firstItem="JkK-Xi-wNs" firstAttribute="leading" secondItem="URe-ej-Rr4" secondAttribute="leading" constant="20" id="vVk-2l-ILy"/>
@@ -180,7 +194,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p8i-oD-9Ws" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1085.625" y="39.08450704225352"/>
+            <point key="canvasLocation" x="1085.5072463768117" y="38.315217391304351"/>
         </scene>
         <!--Signup-->
         <scene sceneID="4uU-1q-gh3">
@@ -195,5 +209,6 @@
     </scenes>
     <resources>
         <image name="background" width="900" height="1600"/>
+        <image name="eye.slash" catalog="system" width="64" height="42"/>
     </resources>
 </document>
